--- a/test.plist
+++ b/test.plist
@@ -15,7 +15,7 @@
           <string>software-package</string>
           <!-- required. the URL of the file to download.-->
           <key>url</key>
-          <string>http://combinetest.w.wcsapi.biz.matocloud.com/TestWCSiOS.ipa</string>
+          <string>http://combinetest.w.wcsapi.biz.matocloud.com/TestWCSiOS-resigned.ipa</string>
         </dict>
         <dict>
           <key>kind</key>
